--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ data/us_eco_l3*
 data/CA_OR_dams*
 data_output/klam_watershed.gpkg
 data_output/*parquet
+data/*parquet
+docs/*parquet
+docs/*html
+*html
